--- a/contact.html
+++ b/contact.html
@@ -10,14 +10,11 @@
   </head>
     <body>
     <header>
-      <div class="head">
-        <img class ="logo" src="image/fesc_logo.png" alt="logo">
-        <form class="search" action="action_page.php">
+      <img class ="logo" src="image/fesc_logo.png" alt="logo">
+      <form class="search">
         <input type="text" placeholder="Search.." name="search">
         <button type="submit"><i class="fa fa-search"></i></button>
-        </form>
-        <h1 class ="title">Floria Energy Sytems Consortium</h1>
-      </div>
+      </form>
       <h3>Floria Energy Sytems Consortium</h3>
       <h3>272 Grinter Hall P.O. Box 115500 Gainesville, FL 32611-5500</h3>
       <h3>352 294 2027</h3>
@@ -47,7 +44,7 @@
         <input type="text" name="name" id="name" required/>
         <label for="name"> Your Name</label>
         <br>
-        <input type="email" name="email" id="email" required/>
+        <input type="email" name="email-address" id="email-address" required/>
         <label for="email">Email address</label>
         <br>
         <fieldset>
@@ -60,7 +57,7 @@
         <br>
         <textarea rows="10" cols="60" name="comments" id="comments">Type your comment here...</textarea>
         <label for ="comments">Comment</label>
-          <br>
+        <br>
         <input type="submit" name ="submit" value="Answer" disabled/>
         </form>
       </article>
@@ -73,25 +70,56 @@
       </aside>
       <section>
         <form>
-        <label for="email">Sign up for FESC newsletter</label>
-        <input type="email" name="email" id="email" placeholder="Enter Email" required/>
-        <button type="submit" class="signupbtn">Sign Up</button>
+          <label for="email">Sign up for FESC newsletter</label>
+          <input type="email" name="email" id="email" placeholder="Enter Email" required/>
+          <button type="submit" class="signupbtn">Sign Up</button>
         </form>
       </section>
     <footer>
-      <div class="footer">
-        <div class="note">
-          <h6>Floria Energy Sytems Consortium</h6>
-          <h6>272 Grinter Hall P.O. Box 115500 Gainesville, FL 32611-5500</h6>
-          <h6>352 294 2027</h6>
-          <h6>Copyright 2018 Floria Energy Sytems Consortium</h6>
-        </div>
-      <div class="icon">
-        <i class="fab fa-facebook-square fa-3x"></i>
-        <i class="fab fa-twitter-square fa-3x"></i>
-        <i class="fab fa-linkedin fa-3x"></i>
-        </div>
-      </div>
+      <a href=http://www.ufl.edu>
+      <img src="image/logo_01.jpg" alt="university_of_florida">
+        </a>
+      <a href=http://www.fsu.edu>
+      <img src="image/logo_02.jpg" alt="florida_state_university">
+        </a>
+      <a href=https://www.ucf.edu>
+      <img src="image/logo_03.jpg" alt="university_of_central_florida">
+        </a>
+      <a href=http://www.usf.edu>
+      <img src="image/logo_04.jpg" alt="university_of_south_florida">
+        </a>
+      <a href=http://www.famu.edu>
+      <img src="image/logo_05.jpg" alt="florida_agricultural_and_mechanical_university">
+        </a>
+      <a href=http://www.fau.edu>
+      <img src="image/logo_06.jpg" alt="florida_atlantic_university">
+        </a>
+      <a href=https://www.fgcu.edu>
+      <img src="image/logo_07.jpg" alt="florida_gulf_coast_university">
+        </a>
+      <a href=https://www.fiu.edu>
+      <img src="image/logo_08.jpg" alt="florida_international_university">
+        </a>
+      <a href=https://www.ncf.edu>
+      <img src="image/logo_09.jpg" alt="new_college_of_florida">
+        </a>
+      <a href=http://www.unf.edu>
+      <img src="image/logo_10.jpg" alt="university_of_north_florida">
+        </a>
+      <a href=http://uwf.edu>
+      <img src="image/logo_11.jpg" alt="university_of_west_florida">
+      </a>
+      <a href=https://floridapoly.edu>
+      <img src="image/logo_12.jpg" alt="florida_polytechnic_university">
+      </a>
+      <h6>Floria Energy Sytems Consortium</h6>
+      <h6>272 Grinter Hall P.O. Box 115500 Gainesville, FL 32611-5500</h6>
+      <h6>352 294 2027</h6>
+      <h6>Copyright 2018 Floria Energy Sytems Consortium</h6>
+      <h6>All Rights Reserved. Design by sjulien.com.</h6>
+      <i class="fab fa-facebook-square fa-3x"></i>
+      <i class="fab fa-twitter-square fa-3x"></i>
+      <i class="fab fa-linkedin fa-3x"></i>
     </footer>
   </body>
 </html>
