--- a/index.html
+++ b/index.html
@@ -10,23 +10,26 @@
   </head>
     <body>
     <header>
-      <img class ="logo" src="image/fesc_logo.png" alt="logo">
-      <form class="search">
-        <input type="text" placeholder="Search.." name="search">
-        <button type="submit"><i class="fa fa-search"></i></button>
-      </form>
-      <h1 class ="title">Floria Energy Sytems Consortium</h1>
-      <h3>Floria Energy Sytems Consortium</h3>
-      <h3>272 Grinter Hall P.O. Box 115500 Gainesville, FL 32611-5500</h3>
-      <h3>352 294 2027</h3>
-    </header>
-    <aside>
       <nav>
         <a class ="link 1" href="index.html">Home</a>
         <a class ="link 2" href="contact.html">Contact Us</a>
         <a class ="link 3" href="research.html">FESC Research</a>
       </nav>
-      </aside>
+       <form class="search">
+        <input type="text" placeholder="Search.." name="search">
+        <button type="submit"><i class="fa fa-search"></i></button>
+      </form>
+      <i class="fab fa-facebook-square fa-3x"></i>
+      <i class="fab fa-twitter-square fa-3x"></i>
+      <i class="fab fa-linkedin fa-3x"></i>
+    </header>
+    <section>
+      <img class ="logo" src="image/fesc_logo.png" alt="logo">
+      <h1 class ="title">Floria Energy Sytems Consortium</h1>
+      <h3>Floria Energy Sytems Consortium</h3>
+      <h3>272 Grinter Hall P.O. Box 115500 Gainesville, FL 32611-5500</h3>
+      <h3>352 294 2027</h3>  
+    </section>
       <article>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/YA2ofbdd-G8" allowfullscreen></iframe>
         <img src="image/header_img_02.jpg" alt="research">
@@ -51,56 +54,54 @@
         (d) Develop education and outreach programs to prepare a qualified energy workforce and informed public.</p>
       </article>
       <aside>
-        <nav>
-          <a class ="link 1" href="index.html">Home</a>
-          <a class ="link 2" href="contact.html">Contact Us</a>
-          <a class ="link 3" href="research.html">FESC Research</a>
-        </nav>
-      </aside>
-      <section>
         <form>
           <label for="email">Sign up for FESC newsletter</label>
           <input type="email" name="email" id="email" placeholder="Enter Email" required/>
           <button type="submit" class="signupbtn">Sign Up</button>
         </form>
-      </section>
-    <footer>
       <a href=http://www.ufl.edu>
       <img src="image/logo_01.jpg" alt="university_of_florida">
-        </a>
+      </a>
       <a href=http://www.fsu.edu>
       <img src="image/logo_02.jpg" alt="florida_state_university">
-        </a>
+      </a>
       <a href=https://www.ucf.edu>
       <img src="image/logo_03.jpg" alt="university_of_central_florida">
-        </a>
+      </a>
       <a href=http://www.usf.edu>
       <img src="image/logo_04.jpg" alt="university_of_south_florida">
-        </a>
+      </a>
       <a href=http://www.famu.edu>
       <img src="image/logo_05.jpg" alt="florida_agricultural_and_mechanical_university">
-        </a>
+      </a>
       <a href=http://www.fau.edu>
       <img src="image/logo_06.jpg" alt="florida_atlantic_university">
-        </a>
+      </a>
       <a href=https://www.fgcu.edu>
       <img src="image/logo_07.jpg" alt="florida_gulf_coast_university">
-        </a>
+      </a>
       <a href=https://www.fiu.edu>
       <img src="image/logo_08.jpg" alt="florida_international_university">
-        </a>
+      </a>
       <a href=https://www.ncf.edu>
       <img src="image/logo_09.jpg" alt="new_college_of_florida">
-        </a>
+      </a>
       <a href=http://www.unf.edu>
       <img src="image/logo_10.jpg" alt="university_of_north_florida">
-        </a>
+      </a>
       <a href=http://uwf.edu>
       <img src="image/logo_11.jpg" alt="university_of_west_florida">
       </a>
       <a href=https://floridapoly.edu>
       <img src="image/logo_12.jpg" alt="florida_polytechnic_university">
       </a>
+      </aside>
+    <footer>
+      <nav>
+        <a class ="link 1" href="index.html">Home</a>
+        <a class ="link 2" href="contact.html">Contact Us</a>
+        <a class ="link 3" href="research.html">FESC Research</a>
+      </nav>
       <h6>Floria Energy Sytems Consortium</h6>
       <h6>272 Grinter Hall P.O. Box 115500 Gainesville, FL 32611-5500</h6>
       <h6>352 294 2027</h6>
