--- a/contact.html
+++ b/contact.html
@@ -2,48 +2,77 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href=https://necolas.github.io/normalize.css/8.0.0/normalize.css>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merienda%7CPhilosopher%7CSlabo+27px">
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Neuton|Slabo+27px" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
     <title>Floria Energy Sytems Consortium</title>
   </head>
     <body>
     <header>
+      <div class="section group">
+      <div class="col span_1_of_3">
       <nav>
         <a class ="link 1" href="index.html">Home</a>
         <a class ="link 2" href="contact.html">Contact Us</a>
         <a class ="link 3" href="research.html">FESC Research</a>
       </nav>
+        </div>
+        <div class="col span_1_of_3">
        <form class="search">
         <input type="text" placeholder="Search.." name="search">
         <button type="submit"><i class="fa fa-search"></i></button>
       </form>
+        </div>
+        <div class="col span_1_of_3">
       <i class="fab fa-facebook-square fa-3x"></i>
       <i class="fab fa-twitter-square fa-3x"></i>
       <i class="fab fa-linkedin fa-3x"></i>
+        </div>
+      </div>
     </header>
     <section>
+      <div class="section group">
+      <div class="col span_1_of_2">
       <img class ="logo" src="image/fesc_logo.png" alt="logo">
+      </div>
+      <div class="col span_1_of_2">
       <h1 class ="title">Floria Energy Sytems Consortium</h1>
       <h3>Floria Energy Sytems Consortium</h3>
       <h3>272 Grinter Hall P.O. Box 115500 Gainesville, FL 32611-5500</h3>
       <h3>352 294 2027</h3>  
+        </div>
+      </div>
     </section>
       <article>
         <h2>Contact Us</h2>
+        <div class="section group">
+        <div class="col span_1_of_2">
         <h3>FESC Facilities</h3>
         <h3>Our Address</h3>
         <h3>University of Florida</h3>
         <h3>272 Grinter Hall P.O. Box 115500 Gainesville, FL 32611-5500</h3>
-        <img src="image/map.png" alt="map">
+          <h3>Phone Number: 352 294 2027</h3>
+          </div>
+        <div class="col span_1_of_2">
+          <h3>Map and Directions</h3>
+        <img class="map" src="image/map.png" alt="map">
+          </div>
+        </div>
+        <div class="section group">
+        <div class="col span_1_of_2">
         <h4>Dr. David Norton; Interim Director</h4>
-        <h3>Email: dpnorton@ufl.edu</h3>
-        <img src="image/norton.png" alt="interim">
+        <h4>Email: dpnorton@ufl.edu</h4>
+        <img class="person" src="image/norton.png" alt="interim">
+          </div>
+        <div class="col span_1_of_2">
         <h4>Ms. Canan “Janan” Balaban; Associate Director</h4>
         <h4>Email: cbalaban@ufl.edu</h4>
-        <img src="image/balaban.png" alt="associate">
-        <p>Feel free to contact us or leave us comment</p>
+        <img class="person" src="image/balaban.png" alt="associate">
+          </div>
+        </div>
+        <h2>Feel free to contact us or leave us comment</h2>
         <form>
         <input type="text" name="name" id="name" required/>
         <label for="name"> Your Name</label>
@@ -66,62 +95,104 @@
         </form>
       </article>
       <aside>
+        <div class="section group">
+          <div class="col span_1_of_2">
         <form>
           <label for="email">Sign up for FESC newsletter</label>
           <input type="email" name="email" id="email" placeholder="Enter Email" required/>
           <button type="submit" class="signupbtn">Sign Up</button>
         </form>
+          </div>
+            <div class="col span_1_of_2">
+        <div class="section group">
+        <div class="col span_1_of_6">
       <a href=http://www.ufl.edu>
       <img src="image/logo_01.jpg" alt="university_of_florida">
       </a>
+          </div>
+        <div class="col span_1_of_6">
       <a href=http://www.fsu.edu>
       <img src="image/logo_02.jpg" alt="florida_state_university">
       </a>
+          </div>
+          <div class="col span_1_of_6">
       <a href=https://www.ucf.edu>
       <img src="image/logo_03.jpg" alt="university_of_central_florida">
       </a>
+          </div>
+          <div class="col span_1_of_6">
       <a href=http://www.usf.edu>
       <img src="image/logo_04.jpg" alt="university_of_south_florida">
       </a>
+          </div>
+          <div class="col span_1_of_6">
       <a href=http://www.famu.edu>
       <img src="image/logo_05.jpg" alt="florida_agricultural_and_mechanical_university">
       </a>
+          </div>
+          <div class="col span_1_of_6">
       <a href=http://www.fau.edu>
       <img src="image/logo_06.jpg" alt="florida_atlantic_university">
       </a>
+          </div>
+        </div>
+          <div class="section group">
+          <div class="col span_1_of_6">
       <a href=https://www.fgcu.edu>
       <img src="image/logo_07.jpg" alt="florida_gulf_coast_university">
       </a>
+          </div>
+        <div class="col span_1_of_6">
       <a href=https://www.fiu.edu>
       <img src="image/logo_08.jpg" alt="florida_international_university">
       </a>
+          </div>
+          <div class="col span_1_of_6">
       <a href=https://www.ncf.edu>
       <img src="image/logo_09.jpg" alt="new_college_of_florida">
       </a>
+          </div>
+          <div class="col span_1_of_6">
       <a href=http://www.unf.edu>
       <img src="image/logo_10.jpg" alt="university_of_north_florida">
       </a>
+          </div>
+          <div class="col span_1_of_6">
       <a href=http://uwf.edu>
       <img src="image/logo_11.jpg" alt="university_of_west_florida">
       </a>
+          </div>
+          <div class="col span_1_of_6">
       <a href=https://floridapoly.edu>
       <img src="image/logo_12.jpg" alt="florida_polytechnic_university">
       </a>
+          </div>
+          </div>
+        </div>
+        </div>
       </aside>
     <footer>
+      <div class="section group">
+      <div class="col span_1_of_3">
       <nav>
         <a class ="link 1" href="index.html">Home</a>
         <a class ="link 2" href="contact.html">Contact Us</a>
         <a class ="link 3" href="research.html">FESC Research</a>
       </nav>
+        </div>
+        <div class="col span_1_of_3">
       <h6>Floria Energy Sytems Consortium</h6>
       <h6>272 Grinter Hall P.O. Box 115500 Gainesville, FL 32611-5500</h6>
       <h6>352 294 2027</h6>
       <h6>Copyright 2018 Floria Energy Sytems Consortium</h6>
       <h6>All Rights Reserved. Design by sjulien.com.</h6>
+        </div>
+        <div class="col span_1_of_3">
       <i class="fab fa-facebook-square fa-3x"></i>
       <i class="fab fa-twitter-square fa-3x"></i>
       <i class="fab fa-linkedin fa-3x"></i>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
