--- a/index.html
+++ b/index.html
@@ -2,114 +2,173 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href=https://necolas.github.io/normalize.css/8.0.0/normalize.css>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merienda%7CPhilosopher%7CSlabo+27px">
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Neuton|Slabo+27px" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
     <title>Floria Energy Sytems Consortium</title>
   </head>
     <body>
     <header>
-      <nav>
-        <a class ="link 1" href="index.html">Home</a>
-        <a class ="link 2" href="contact.html">Contact Us</a>
-        <a class ="link 3" href="research.html">FESC Research</a>
-      </nav>
-       <form class="search">
-        <input type="text" placeholder="Search.." name="search">
-        <button type="submit"><i class="fa fa-search"></i></button>
-      </form>
-      <i class="fab fa-facebook-square fa-3x"></i>
-      <i class="fab fa-twitter-square fa-3x"></i>
-      <i class="fab fa-linkedin fa-3x"></i>
+      <div class="section group">
+        <div class="col span_1_of_3">
+          <nav>
+            <a class ="link 1" href="index.html">Home</a>
+            <a class ="link 2" href="contact.html">Contact Us</a>
+            <a class ="link 3" href="research.html">FESC Research</a>
+          </nav>
+        </div>
+        <div class="col span_1_of_3">
+         <form class="search">
+          <input type="text" placeholder="Search.." name="search">
+          <button type="submit"><i class="fa fa-search"></i></button>
+          </form>
+         </div>
+        <div class="col span_1_of_3">
+          <i class="fab fa-facebook-square fa-3x"></i>
+          <i class="fab fa-twitter-square fa-3x"></i>
+          <i class="fab fa-linkedin fa-3x"></i>
+        </div>
+      </div>
     </header>
     <section>
-      <img class ="logo" src="image/fesc_logo.png" alt="logo">
-      <h1 class ="title">Floria Energy Sytems Consortium</h1>
-      <h3>Floria Energy Sytems Consortium</h3>
-      <h3>272 Grinter Hall P.O. Box 115500 Gainesville, FL 32611-5500</h3>
-      <h3>352 294 2027</h3>  
+      <div class="section group">
+        <div class="col span_1_of_2">
+          <img class ="logo" src="image/fesc_logo.png" alt="logo">
+        </div>
+        <div class="col span_1_of_2">
+          <h1 class ="title">Floria Energy Sytems Consortium</h1>
+          <h3>Floria Energy Sytems Consortium</h3>
+          <h3>272 Grinter Hall P.O. Box 115500 Gainesville, FL 32611-5500</h3>
+          <h3>352 294 2027</h3>  
+        </div>
+      </div>
     </section>
       <article>
+         <div class="section group">
+           <div class="col span_1_of_2">
+        <h2>FESC Bringing Energy Solutions to Florida, the Nation and the World</h2>
+        <p>The Florida Energy Systems Consortium (FESC) was created by the Florida State government to promote collaboration among the energy experts at its 12 supported universities to share energy-related expertise. The consortium assists the state in the development and implementation of an environmentally compatible, sustainable, and efficient energy strategic plan. The Consortium was charged to ‘perform research and development on innovative energy systems that lead to alternative energy strategies, improved energy efficiencies, and expanded economic development for the state‘. The legislature appropriated funding for research at five of the universities as well as support for education, outreach, and technology commercialization. The Consortium reports to and provides guidance on an as needed basis to the Florida Legislature, Executive Office of the Governor, and the Florida’s Office of Energy housed in the Florida Department of Agriculture and Consumer Services.</p>
+        <p>Overarching to the Consortium’s research strategy is an energy systems approach to identify innovation opportunities, prepare an energy workforce, and guide economic development.</p>
+        <p>Through collaborative research and development across the State University System and the industry, the goal of the consortium is to become a world leader in energy research, education, technology, and energy systems analysis. In so doing, the consortium shall:</p>
+        <p>(a) Coordinate and initiate increased collaborative interdisciplinary energy research among the universities and the energy industry.</p>
+        <p>(b) Assist in the creation and development of a Florida-based energy technology industry through efforts that would expedite commercialization of innovative energy technologies by taking advantage of the energy expertise within the State University System, high-technology incubators, industrial parks, and industry-driven research centers.</p>
+        <p>(c) Provide a state resource for objective energy systems analysis.</p>
+        <p>(d) Develop education and outreach programs to prepare a qualified energy workforce and informed public.</p>
+      </div>
+      <div class="col span_1_of_2" "youtube" style="text-align: center;">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/YA2ofbdd-G8" allowfullscreen></iframe>
-        <img src="image/header_img_02.jpg" alt="research">
-        <img src="image/header_img_03.jpg" alt="research">
-        <img src="image/header_img_07.jpg" alt="research">
+      </div>
+     </div>
+        <div class="center">
         <img src="image/header_img_08.jpg" alt="solar">
         <img src="image/header_img_09.jpg" alt="energy">
-        <img src="image/header_img_10.jpg" alt="wind">
-        <h2>FESC Bringing Energy Solutions to Florida, the Nation and the World</h2>
-        <p>The Florida Energy Systems Consortium (FESC) was created by the Florida State government to promote collaboration among the energy experts at its 12 supported universities to share energy-related expertise. The consortium assists the state in the development and implementation of an environmentally compatible, sustainable, and efficient energy strategic plan. The Consortium was charged to ‘perform research and development on innovative energy systems that lead to alternative energy strategies, improved energy efficiencies, and expanded economic development for the state‘. The legislature appropriated funding for research at five of the universities as well as support for education, outreach, and technology commercialization. The Consortium reports to and provides guidance on an as needed basis to the Florida Legislature, Executive Office of the Governor, and the Florida’s Office of Energy housed in the Florida Department of Agriculture and Consumer Services.
-
-        Overarching to the Consortium’s research strategy is an energy systems approach to identify innovation opportunities, prepare an energy workforce, and guide economic development.
-
-        Through collaborative research and development across the State University System and the industry, the goal of the consortium is to become a world leader in energy research, education, technology, and energy systems analysis. In so doing, the consortium shall:
-
-        (a) Coordinate and initiate increased collaborative interdisciplinary energy research among the universities and the energy industry.
-
-        (b) Assist in the creation and development of a Florida-based energy technology industry through efforts that would expedite commercialization of innovative energy technologies by taking advantage of the energy expertise within the State University System, high-technology incubators, industrial parks, and industry-driven research centers.
-
-        (c) Provide a state resource for objective energy systems analysis.
-
-        (d) Develop education and outreach programs to prepare a qualified energy workforce and informed public.</p>
+         <img src="image/header_img_10.jpg" alt="wind">
+        <img src="image/header_img_02.jpg" alt="research1">
+        <img src="image/header_img_03.jpg" alt="research2">
+        <img src="image/header_img_07.jpg" alt="research3">
+        </div>
       </article>
       <aside>
+        <div class="section group">
+        <div class="col span_1_of_2">
         <form>
           <label for="email">Sign up for FESC newsletter</label>
           <input type="email" name="email" id="email" placeholder="Enter Email" required/>
           <button type="submit" class="signupbtn">Sign Up</button>
         </form>
+        </div>
+      <div class="col span_1_of_2">
+        <div class="section group">
+        <div class="col span_1_of_6">
       <a href=http://www.ufl.edu>
       <img src="image/logo_01.jpg" alt="university_of_florida">
       </a>
+          </div>
+        <div class="col span_1_of_6">
       <a href=http://www.fsu.edu>
       <img src="image/logo_02.jpg" alt="florida_state_university">
       </a>
+          </div>
+          <div class="col span_1_of_6">
       <a href=https://www.ucf.edu>
       <img src="image/logo_03.jpg" alt="university_of_central_florida">
       </a>
+          </div>
+          <div class="col span_1_of_6">
       <a href=http://www.usf.edu>
       <img src="image/logo_04.jpg" alt="university_of_south_florida">
       </a>
+          </div>
+          <div class="col span_1_of_6">
       <a href=http://www.famu.edu>
       <img src="image/logo_05.jpg" alt="florida_agricultural_and_mechanical_university">
       </a>
+          </div>
+          <div class="col span_1_of_6">
       <a href=http://www.fau.edu>
       <img src="image/logo_06.jpg" alt="florida_atlantic_university">
       </a>
+          </div>
+        </div>
+          <div class="section group">
+          <div class="col span_1_of_6">
       <a href=https://www.fgcu.edu>
       <img src="image/logo_07.jpg" alt="florida_gulf_coast_university">
       </a>
+          </div>
+        <div class="col span_1_of_6">
       <a href=https://www.fiu.edu>
       <img src="image/logo_08.jpg" alt="florida_international_university">
       </a>
+          </div>
+          <div class="col span_1_of_6">
       <a href=https://www.ncf.edu>
       <img src="image/logo_09.jpg" alt="new_college_of_florida">
       </a>
+          </div>
+          <div class="col span_1_of_6">
       <a href=http://www.unf.edu>
       <img src="image/logo_10.jpg" alt="university_of_north_florida">
       </a>
+          </div>
+          <div class="col span_1_of_6">
       <a href=http://uwf.edu>
       <img src="image/logo_11.jpg" alt="university_of_west_florida">
       </a>
+          </div>
+          <div class="col span_1_of_6">
       <a href=https://floridapoly.edu>
       <img src="image/logo_12.jpg" alt="florida_polytechnic_university">
       </a>
+          </div>
+          </div>
+        </div>
+        </div>
       </aside>
     <footer>
+      <div class="section group">
+        <div class="col span_1_of_3">
       <nav>
         <a class ="link 1" href="index.html">Home</a>
         <a class ="link 2" href="contact.html">Contact Us</a>
         <a class ="link 3" href="research.html">FESC Research</a>
       </nav>
+        </div>
+        <div class="col span_1_of_3">
       <h6>Floria Energy Sytems Consortium</h6>
       <h6>272 Grinter Hall P.O. Box 115500 Gainesville, FL 32611-5500</h6>
       <h6>352 294 2027</h6>
       <h6>Copyright 2018 Floria Energy Sytems Consortium</h6>
       <h6>All Rights Reserved. Design by sjulien.com.</h6>
+        </div>
+      <div class="col span_1_of_3">
       <i class="fab fa-facebook-square fa-3x"></i>
       <i class="fab fa-twitter-square fa-3x"></i>
       <i class="fab fa-linkedin fa-3x"></i>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
