updated partials for css

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="col span_1_of_3">
           <nav>
             <a class ="link 1" href="index.html">Home</a>
-            <a class ="link 2" href="contact.html">Contact Us</a>
-            <a class ="link 3" href="research.html">FESC Research</a>
+            <a class ="link 2" href="research.html">FESC Research</a>
+            <a class ="link 3" href="contact.html">Contact Us</a>
           </nav>
         </div>
         <div class="col span_1_of_3">
@@ -47,6 +47,9 @@
     </section>
       <article>
          <div class="section group">
+        <div class="col span_1_of_2" "youtube" style="text-align: center;">
+        <iframe width="90%" height="315" src="https://www.youtube.com/embed/YA2ofbdd-G8" allowfullscreen></iframe>
+      </div>
            <div class="col span_1_of_2">
         <h2>FESC Bringing Energy Solutions to Florida, the Nation and the World</h2>
         <p>The Florida Energy Systems Consortium (FESC) was created by the Florida State government to promote collaboration among the energy experts at its 12 supported universities to share energy-related expertise. The consortium assists the state in the development and implementation of an environmentally compatible, sustainable, and efficient energy strategic plan. The Consortium was charged to ‘perform research and development on innovative energy systems that lead to alternative energy strategies, improved energy efficiencies, and expanded economic development for the state‘. The legislature appropriated funding for research at five of the universities as well as support for education, outreach, and technology commercialization. The Consortium reports to and provides guidance on an as needed basis to the Florida Legislature, Executive Office of the Governor, and the Florida’s Office of Energy housed in the Florida Department of Agriculture and Consumer Services.</p>
@@ -57,17 +60,28 @@
         <p>(c) Provide a state resource for objective energy systems analysis.</p>
         <p>(d) Develop education and outreach programs to prepare a qualified energy workforce and informed public.</p>
       </div>
-      <div class="col span_1_of_2" "youtube" style="text-align: center;">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/YA2ofbdd-G8" allowfullscreen></iframe>
-      </div>
      </div>
-        <div class="center">
+        <div class="section group center">
+        <div class="col span_1_of_3">
         <img src="image/header_img_08.jpg" alt="solar">
+          </div>
+          <div class="col span_1_of_3">
         <img src="image/header_img_09.jpg" alt="energy">
+          </div>
+          <div class="col span_1_of_3">
          <img src="image/header_img_10.jpg" alt="wind">
+          </div>
+        </div>
+          <div class="section group center">
+        <div class="col span_1_of_3">
         <img src="image/header_img_02.jpg" alt="research1">
+            </div>
+            <div class="col span_1_of_3">
         <img src="image/header_img_03.jpg" alt="research2">
+            </div>
+            <div class="col span_1_of_3">
         <img src="image/header_img_07.jpg" alt="research3">
+            </div>
         </div>
       </article>
       <aside>
@@ -152,8 +166,8 @@
         <div class="col span_1_of_3">
       <nav>
         <a class ="link 1" href="index.html">Home</a>
-        <a class ="link 2" href="contact.html">Contact Us</a>
-        <a class ="link 3" href="research.html">FESC Research</a>
+        <a class ="link 2" href="research.html">FESC Research</a>
+        <a class ="link 3" href="contact.html">Contact Us</a>
       </nav>
         </div>
         <div class="col span_1_of_3">
