added two google charts

--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href=https://necolas.github.io/normalize.css/8.0.0/normalize.css>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Neuton|Slabo+27px" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif%7CNeuton%7CSlabo+27px" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/contact.css">
-    <title>Floria Energy Sytems Consortium</title>
+    <title>Contact Us</title>
   </head>
     <body>
     <header>
@@ -38,7 +38,7 @@
       <img class ="logo" src="image/fesc_logo.png" alt="logo">
       </div>
       <div class="col span_1_of_2">
-      <h1 class ="title">Floria Energy Sytems Consortium</h1>
+      <h1 class ="title">Florida Energy Systems Consortium</h1>
       <h3>Floria Energy Sytems Consortium</h3>
       <h3>272 Grinter Hall P.O. Box 115500 Gainesville, FL 32611-5500</h3>
       <h3>352 294 2027</h3>  
