--- a/research.html
+++ b/research.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href=https://necolas.github.io/normalize.css/8.0.0/normalize.css>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-   <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Neuton|Slabo+27px" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Bree+Serif%7CNeuton%7CSlabo+27px" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/research.css">
-    <title>Floria Energy Sytems Consortium</title>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="scripts/sctipt.js"></script>
+    <title>FESC Research</title>
   </head>
     <body>
     <header>
@@ -38,8 +40,8 @@
       <img class ="logo" src="image/fesc_logo.png" alt="logo">
         </div>
         <div class="col span_1_of_2">
-      <h1 class ="title">Floria Energy Sytems Consortium</h1>
-      <h3>Floria Energy Sytems Consortium</h3>
+      <h1 class ="title">Florida Energy Systems Consortium</h1>
+      <h3>Florida Energy Systems Consortium</h3>
       <h3>272 Grinter Hall P.O. Box 115500 Gainesville, FL 32611-5500</h3>
       <h3>352 294 2027</h3>  
         </div>
@@ -48,16 +50,25 @@
     <article>
       <h2>FESC Research Areas</h2>
       <div class="section group">
-	   <div class="col span_1_of_2">
-      <h4>1. Overarching Strategic Research Thrust: Understanding Florida’s Energy Systems</h4>
-      <p>This thrust provides a platform for each of the other thrusts and allow direct connection to the State’s energy economy. It is planned to unite existing strengths in energy science and engineering with the recognized experts in other areas, including Law, Public Administration and Policy, Economics, Environmental Studies, Geography, Urban and Regional Planning, Information Systems, Social Sciences, and Media Arts.</p>
+        <div class="col span_1_of_2">
+          <h3>Electricity Consumption in Florida</h3>
+      <div id="chart-consumption" class="google"></div>
         </div>
-	   <div class="col span_1_of_2">
-      <img class="research" src="image/image0053.jpg" alt="lab">
+        <div class="col span_1_of_2">
+          <h3>Renewable Energy Production in Florida</h3>
+      <div id="chart-production" class="google"></div>
         </div>
       </div>
+      <div class="section group">
+         <div class="col span_1_of_2">
+      <h4>1. Overarching Strategic Research Thrust: Understanding Florida’s Energy Systems</h4>
+      <p>This thrust provides a platform for each of the other thrusts and allow direct connection to the State’s energy economy. It is planned to unite existing strengths in energy science and engineering with the recognized experts in other areas, including Law, Public Administration and Policy, Economics, Environmental Studies, Geography, Urban and Regional Planning, Information Systems, Social Sciences, and Media Arts.</p>
+        </div> 
+	   <div class="col span_1_of_2">
       <h4>2. Enhancing Energy Efficiency and Conservation</h4>
       <p>Energy efficient technologies have the greatest potential to reduce Florida’s energy consumption. The focus is improving existing and new construction building efficiency and energy system integration for sustainable community developments, industry energy auditing and efficiency, outreach, and education. Buildings use more energy than any other sector of the economy, including transportation and industry, thus making it a major efficiency target. The integration of innovative energy-efficient technologies into our building operations and construction will result in cleaner, healthier, and more sustainable and economically viable communities that are less susceptible to disaster. As part of the Consortium, well-instrumented testing structures will be established to evaluate the effectiveness of integrated emerging technologies as well as hurricane-level wind resilience.</p>
+        </div>
+      </div>
         <div class="section group">
 	   <div class="col span_1_of_2">
       <h4>3. Developing Florida’s Biomass Resources</h4>
@@ -68,25 +79,32 @@
           </div>
         </div>
         <div class="section group">
+          <div class="col span_1_of_2">
+      <img class="research" src="image/image00211.jpg" alt="solar">
+          </div>
 	   <div class="col span_1_of_2">
       <h4>4. Harnessing Florida’s Solar Resources</h4>
       <p>The direct conversion of incident solar radiation to electric power is the ultimate sustainable energy source. Not only does it bypass photosynthesis and thus carbon, but it can be implemented also in a distributed mode and fed to an existing distribution system (grid). Florida is one of the richest states in solar radiation, receiving 6 kWhr/m2/day. Therefore, an appropriate strategy for the Sunshine State is to include a significant solar component in its renewables package to offset growth in energy demand.</p>
           </div>
-	   <div class="col span_1_of_2">
-      <img class="research" src="image/image00211.jpg" alt="solar">
-          </div>
       </div>
+      <div class="section group">
+	   <div class="col span_1_of_2">
       <h4>5. Ensuring Nuclear Energy and Carbon Constrained Technologies for Electric Power in Florida</h4>
       <p>Nuclear energy provides large-scale, carbon-free electric power generation today and will remain a major contributor to our power needs. New plant strategy will require an expanded workforce. An existing training reactor would be used to provide training in critical areas such as design, construction, operation, fuel reprocessing, and waste remediation. Development of clean coal and natural gas power generation with carbon sequestration is important for a carbon-constrained world since fossil fuels are the largest contributor to electric power generation.</p>
+        </div>
+         <div class="col span_1_of_2">
+      <img class="research" src="image/image0053.jpg" alt="lab">
+        </div>
+        </div>
         <div class="section group">
+	   <div class="col span_1_of_2">
+      <img class="research" src="image/image0033.jpg" alt="ocean_energy">
+          </div>
 	   <div class="col span_1_of_2">
       <h4>6. Exploiting Florida’s Ocean Energy Resources</h4>
       <p>Covering 70% of the earth’s surface, the oceans are a large solar collector. The resulting energy absorption creates image0033thermal gradients and volatilizes water to produce a large potential renewable energy sources, including ocean current energy, wave energy, tidal energy, ocean thermal gradient energy and salinity gradient energy. Florida Atlantic University’s Center for Ocean Energy Technology provides a focus for development of renewable power sources</p>
           </div>
-	   <div class="col span_1_of_2">
-      <img class="research" src="image/image0033.jpg" alt="ocean_energy">
-          </div>
-          </div>
+      </div>
           <div class="section group">
 	   <div class="col span_1_of_2">
       <h4>7. Securing our Energy Storage and Delivery Infrastructure</h4>
