--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href=https://necolas.github.io/normalize.css/8.0.0/normalize.css>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Neuton|Slabo+27px" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif%7CNeuton%7CSlabo+27px" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/index.css">
     <title>Floria Energy Sytems Consortium</title>
   </head>
@@ -13,11 +13,13 @@
     <header>
       <div class="section group">
         <div class="col span_1_of_3">
+          <div class="topnav" id="myTopnav">
           <nav>
             <a class ="link 1" href="index.html">Home</a>
             <a class ="link 2" href="research.html">FESC Research</a>
             <a class ="link 3" href="contact.html">Contact Us</a>
           </nav>
+            </div>
         </div>
         <div class="col span_1_of_3">
          <form class="search">
@@ -38,7 +40,7 @@
           <img class ="logo" src="image/fesc_logo.png" alt="logo">
         </div>
         <div class="col span_1_of_2">
-          <h1 class ="title">Floria Energy Sytems Consortium</h1>
+          <h1 class ="title">Florida Energy Systems Consortium</h1>
           <h3>Floria Energy Sytems Consortium</h3>
           <h3>272 Grinter Hall P.O. Box 115500 Gainesville, FL 32611-5500</h3>
           <h3>352 294 2027</h3>  
@@ -47,9 +49,11 @@
     </section>
       <article>
          <div class="section group">
-        <div class="col span_1_of_2" "youtube" style="text-align: center;">
+        <div class="col span_1_of_2" style="text-align: center;">
+          <div class="youtube">
         <iframe width="90%" height="315" src="https://www.youtube.com/embed/YA2ofbdd-G8" allowfullscreen></iframe>
-      </div>
+            </div>
+            </div>
            <div class="col span_1_of_2">
         <h2>FESC Bringing Energy Solutions to Florida, the Nation and the World</h2>
         <p>The Florida Energy Systems Consortium (FESC) was created by the Florida State government to promote collaboration among the energy experts at its 12 supported universities to share energy-related expertise. The consortium assists the state in the development and implementation of an environmentally compatible, sustainable, and efficient energy strategic plan. The Consortium was charged to ‘perform research and development on innovative energy systems that lead to alternative energy strategies, improved energy efficiencies, and expanded economic development for the state‘. The legislature appropriated funding for research at five of the universities as well as support for education, outreach, and technology commercialization. The Consortium reports to and provides guidance on an as needed basis to the Florida Legislature, Executive Office of the Governor, and the Florida’s Office of Energy housed in the Florida Department of Agriculture and Consumer Services.</p>
