updated nav bar

--- a/index.html
+++ b/index.html
@@ -7,32 +7,31 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif%7CNeuton%7CSlabo+27px" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/index.css">
+    <script src="scripts/sctipt.js"></script>
     <title>Floria Energy Sytems Consortium</title>
   </head>
     <body>
     <header>
       <div class="section group">
-        <div class="col span_1_of_3">
+        <div class="col span_1_of_2">
           <div class="topnav" id="myTopnav">
           <nav>
             <a class ="link 1" href="index.html">Home</a>
             <a class ="link 2" href="research.html">FESC Research</a>
             <a class ="link 3" href="contact.html">Contact Us</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i></a>
           </nav>
             </div>
         </div>
-        <div class="col span_1_of_3">
-         <form class="search">
-          <input type="text" placeholder="Search.." name="search">
-          <button type="submit"><i class="fa fa-search"></i></button>
-          </form>
-         </div>
-        <div class="col span_1_of_3">
+        <div class="col span_1_of_2 ">
+          <div class="display">
           <i class="fab fa-facebook-square fa-3x"></i>
           <i class="fab fa-twitter-square fa-3x"></i>
           <i class="fab fa-linkedin fa-3x"></i>
-        </div>
-      </div>
+            </div>
+            </div>
+            </div>
     </header>
     <section>
       <div class="section group">
@@ -92,10 +91,14 @@
         <div class="section group">
         <div class="col span_1_of_2">
         <form>
-          <label for="email">Sign up for FESC newsletter</label>
+          <label for="email">Sign up for FESC newsletter:</label><br>
           <input type="email" name="email" id="email" placeholder="Enter Email" required/>
           <button type="submit" class="signupbtn">Sign Up</button>
         </form>
+          <form class="search">
+          <input type="text" placeholder="Search.." name="search">
+          <button type="submit"><i class="fa fa-search"></i></button>
+          </form>
         </div>
       <div class="col span_1_of_2">
         <div class="section group">
