--- a/research.html
+++ b/research.html
@@ -14,25 +14,25 @@
     <body>
     <header>
       <div class="section group">
-	 <div class="col span_1_of_3">
-      <nav>
-        <a class ="link 1" href="index.html">Home</a>
-        <a class ="link 2" href="research.html">FESC Research</a>
-        <a class ="link 3" href="contact.html">Contact Us</a>
-      </nav>
+        <div class="col span_1_of_2">
+          <div class="topnav" id="myTopnav">
+          <nav>
+            <a class ="link 1" href="index.html">Home</a>
+            <a class ="link 2" href="research.html">FESC Research</a>
+            <a class ="link 3" href="contact.html">Contact Us</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i></a>
+          </nav>
+            </div>
         </div>
-        <div class="col span_1_of_3">
-       <form class="search">
-        <input type="text" placeholder="Search.." name="search">
-        <button type="submit"><i class="fa fa-search"></i></button>
-      </form>
-        </div>
-        <div class="col span_1_of_3">
-      <i class="fab fa-facebook-square fa-3x"></i>
-      <i class="fab fa-twitter-square fa-3x"></i>
-      <i class="fab fa-linkedin fa-3x"></i>
-        </div>
-      </div>
+        <div class="col span_1_of_2 ">
+          <div class="display">
+          <i class="fab fa-facebook-square fa-3x"></i>
+          <i class="fab fa-twitter-square fa-3x"></i>
+          <i class="fab fa-linkedin fa-3x"></i>
+            </div>
+            </div>
+            </div>
     </header>
     <section>
       <div class="section group">
@@ -119,10 +119,14 @@
         <div class="section group">
 	<div class="col span_1_of_2">
         <form>
-          <label for="email">Sign up for FESC newsletter</label>
+          <label for="email">Sign up for FESC newsletter:</label><br>
           <input type="email" name="email" id="email" placeholder="Enter Email" required/>
           <button type="submit" class="signupbtn">Sign Up</button>
         </form>
+          <form class="search">
+          <input type="text" placeholder="Search.." name="search">
+          <button type="submit"><i class="fa fa-search"></i></button>
+          </form>
           </div>
           <div class="col span_1_of_2">
         <div class="section group">
