--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif%7CNeuton%7CSlabo+27px" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/contact.css">
-    <script src="scripts/sctipt.js"></script>
+    <script src="scripts/script.js"></script>
     <title>Contact Us</title>
   </head>
     <body>
@@ -95,90 +95,77 @@
         <input type="submit" name ="submit" value="Answer" disabled/>
         </form>
       </article>
-      <aside>
-        <div class="section group">
-          <div class="col span_1_of_2">
-        <form>
-          <label for="email">Sign up for FESC newsletter:</label><br>
-          <input type="email" name="email" id="email" placeholder="Enter Email" required/>
-          <button type="submit" class="signupbtn">Sign Up</button>
-        </form>
-          <form class="search">
-          <input type="text" placeholder="Search.." name="search">
-          <button type="submit"><i class="fa fa-search"></i></button>
-          </form>
+           <aside>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+              <form>
+                <label for="email">Sign up for FESC newsletter:</label><br>
+                <input type="email" name="email" id="email" placeholder="Enter Email" required/>
+                <button type="submit" class="signupbtn">Sign Up</button>
+              </form>
+              <form class="search">
+              <input type="text" placeholder="Search.." name="search">
+              <button type="submit"><i class="fa fa-search"></i></button>
+              </form>
+            </div>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+          <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+            <a href=http://www.ufl.edu>
+            <img src="image/logo_01.jpg" alt="university_of_florida"></a>
           </div>
-            <div class="col span_1_of_2">
-        <div class="section group">
-        <div class="col span_1_of_6">
-      <a href=http://www.ufl.edu>
-      <img src="image/logo_01.jpg" alt="university_of_florida">
-      </a>
+          <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+            <a href=http://www.fsu.edu>
+            <img src="image/logo_02.jpg" alt="florida_state_university"></a>
           </div>
-        <div class="col span_1_of_6">
-      <a href=http://www.fsu.edu>
-      <img src="image/logo_02.jpg" alt="florida_state_university">
-      </a>
-          </div>
-          <div class="col span_1_of_6">
-      <a href=https://www.ucf.edu>
-      <img src="image/logo_03.jpg" alt="university_of_central_florida">
-      </a>
-          </div>
-          <div class="col span_1_of_6">
-      <a href=http://www.usf.edu>
-      <img src="image/logo_04.jpg" alt="university_of_south_florida">
-      </a>
-          </div>
-          <div class="col span_1_of_6">
-      <a href=http://www.famu.edu>
-      <img src="image/logo_05.jpg" alt="florida_agricultural_and_mechanical_university">
-      </a>
-          </div>
-          <div class="col span_1_of_6">
-      <a href=http://www.fau.edu>
-      <img src="image/logo_06.jpg" alt="florida_atlantic_university">
-      </a>
-          </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <a href=https://www.ucf.edu>
+          <img src="image/logo_03.jpg" alt="university_of_central_florida"></a>
         </div>
-          <div class="section group">
-          <div class="col span_1_of_6">
-      <a href=https://www.fgcu.edu>
-      <img src="image/logo_07.jpg" alt="florida_gulf_coast_university">
-      </a>
-          </div>
-        <div class="col span_1_of_6">
-      <a href=https://www.fiu.edu>
-      <img src="image/logo_08.jpg" alt="florida_international_university">
-      </a>
-          </div>
-          <div class="col span_1_of_6">
-      <a href=https://www.ncf.edu>
-      <img src="image/logo_09.jpg" alt="new_college_of_florida">
-      </a>
-          </div>
-          <div class="col span_1_of_6">
-      <a href=http://www.unf.edu>
-      <img src="image/logo_10.jpg" alt="university_of_north_florida">
-      </a>
-          </div>
-          <div class="col span_1_of_6">
-      <a href=http://uwf.edu>
-      <img src="image/logo_11.jpg" alt="university_of_west_florida">
-      </a>
-          </div>
-          <div class="col span_1_of_6">
-      <a href=https://floridapoly.edu>
-      <img src="image/logo_12.jpg" alt="florida_polytechnic_university">
-      </a>
-          </div>
-          </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <a href=http://www.usf.edu>
+          <img src="image/logo_04.jpg" alt="university_of_south_florida"></a>
         </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <a href=http://www.famu.edu>
+          <img src="image/logo_05.jpg" alt="florida_agricultural_and_mechanical_university"></a>
         </div>
-      </aside>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <a href=http://www.fau.edu>
+          <img src="image/logo_06.jpg" alt="florida_atlantic_university"></a>
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <a href=https://www.fgcu.edu>
+          <img src="image/logo_07.jpg" alt="florida_gulf_coast_university"></a>
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <a href=https://www.fiu.edu>
+          <img src="image/logo_08.jpg" alt="florida_international_university"></a>
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <a href=https://www.ncf.edu>
+          <img src="image/logo_09.jpg" alt="new_college_of_florida"></a>
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <a href=http://www.unf.edu>
+          <img src="image/logo_10.jpg" alt="university_of_north_florida"></a>
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <a href=http://uwf.edu>
+          <img src="image/logo_11.jpg" alt="university_of_west_florida"></a>
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <a href=https://floridapoly.edu>
+          <img src="image/logo_12.jpg" alt="florida_polytechnic_university">
+          </a>
+        </div>
+      </div>
+      </div>
+      </div>
+    </aside>
     <footer>
       <div class="section group">
-      <div class="col span_1_of_3">
+	<div class="col span_1_of_3">
       <nav>
         <a class ="link 1" href="index.html">Home</a>
         <a class ="link 2" href="research.html">FESC Research</a>
