--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" type="text/css" href=https://necolas.github.io/normalize.css/8.0.0/normalize.css>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif%7CNeuton%7CSlabo+27px" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles/index.css">
-    <script src="scripts/sctipt.js"></script>
+    <script src="scripts/script.js"></script>
     <title>Floria Energy Sytems Consortium</title>
   </head>
     <body>
@@ -64,7 +65,7 @@
         <p>(d) Develop education and outreach programs to prepare a qualified energy workforce and informed public.</p>
       </div>
      </div>
-        <div class="section group center">
+        <div class="section group">
         <div class="col span_1_of_3">
         <img src="image/header_img_08.jpg" alt="solar">
           </div>
@@ -75,7 +76,7 @@
          <img src="image/header_img_10.jpg" alt="wind">
           </div>
         </div>
-          <div class="section group center">
+          <div class="section group">
         <div class="col span_1_of_3">
         <img src="image/header_img_02.jpg" alt="research1">
             </div>
@@ -88,89 +89,76 @@
         </div>
       </article>
       <aside>
-        <div class="section group">
-        <div class="col span_1_of_2">
-        <form>
-          <label for="email">Sign up for FESC newsletter:</label><br>
-          <input type="email" name="email" id="email" placeholder="Enter Email" required/>
-          <button type="submit" class="signupbtn">Sign Up</button>
-        </form>
-          <form class="search">
-          <input type="text" placeholder="Search.." name="search">
-          <button type="submit"><i class="fa fa-search"></i></button>
-          </form>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+              <form>
+                <label for="email">Sign up for FESC newsletter:</label><br>
+                <input type="email" name="email" id="email" placeholder="Enter Email" required/>
+                <button type="submit" class="signupbtn">Sign Up</button>
+              </form>
+              <form class="search">
+              <input type="text" placeholder="Search.." name="search">
+              <button type="submit"><i class="fa fa-search"></i></button>
+              </form>
+            </div>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+          <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+            <a href=http://www.ufl.edu>
+            <img src="image/logo_01.jpg" alt="university_of_florida"></a>
+          </div>
+          <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+            <a href=http://www.fsu.edu>
+            <img src="image/logo_02.jpg" alt="florida_state_university"></a>
+          </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <a href=https://www.ucf.edu>
+          <img src="image/logo_03.jpg" alt="university_of_central_florida"></a>
         </div>
-      <div class="col span_1_of_2">
-        <div class="section group">
-        <div class="col span_1_of_6">
-      <a href=http://www.ufl.edu>
-      <img src="image/logo_01.jpg" alt="university_of_florida">
-      </a>
-          </div>
-        <div class="col span_1_of_6">
-      <a href=http://www.fsu.edu>
-      <img src="image/logo_02.jpg" alt="florida_state_university">
-      </a>
-          </div>
-          <div class="col span_1_of_6">
-      <a href=https://www.ucf.edu>
-      <img src="image/logo_03.jpg" alt="university_of_central_florida">
-      </a>
-          </div>
-          <div class="col span_1_of_6">
-      <a href=http://www.usf.edu>
-      <img src="image/logo_04.jpg" alt="university_of_south_florida">
-      </a>
-          </div>
-          <div class="col span_1_of_6">
-      <a href=http://www.famu.edu>
-      <img src="image/logo_05.jpg" alt="florida_agricultural_and_mechanical_university">
-      </a>
-          </div>
-          <div class="col span_1_of_6">
-      <a href=http://www.fau.edu>
-      <img src="image/logo_06.jpg" alt="florida_atlantic_university">
-      </a>
-          </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <a href=http://www.usf.edu>
+          <img src="image/logo_04.jpg" alt="university_of_south_florida"></a>
         </div>
-          <div class="section group">
-          <div class="col span_1_of_6">
-      <a href=https://www.fgcu.edu>
-      <img src="image/logo_07.jpg" alt="florida_gulf_coast_university">
-      </a>
-          </div>
-        <div class="col span_1_of_6">
-      <a href=https://www.fiu.edu>
-      <img src="image/logo_08.jpg" alt="florida_international_university">
-      </a>
-          </div>
-          <div class="col span_1_of_6">
-      <a href=https://www.ncf.edu>
-      <img src="image/logo_09.jpg" alt="new_college_of_florida">
-      </a>
-          </div>
-          <div class="col span_1_of_6">
-      <a href=http://www.unf.edu>
-      <img src="image/logo_10.jpg" alt="university_of_north_florida">
-      </a>
-          </div>
-          <div class="col span_1_of_6">
-      <a href=http://uwf.edu>
-      <img src="image/logo_11.jpg" alt="university_of_west_florida">
-      </a>
-          </div>
-          <div class="col span_1_of_6">
-      <a href=https://floridapoly.edu>
-      <img src="image/logo_12.jpg" alt="florida_polytechnic_university">
-      </a>
-          </div>
-          </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <a href=http://www.famu.edu>
+          <img src="image/logo_05.jpg" alt="florida_agricultural_and_mechanical_university"></a>
         </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <a href=http://www.fau.edu>
+          <img src="image/logo_06.jpg" alt="florida_atlantic_university"></a>
         </div>
-      </aside>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <a href=https://www.fgcu.edu>
+          <img src="image/logo_07.jpg" alt="florida_gulf_coast_university"></a>
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <a href=https://www.fiu.edu>
+          <img src="image/logo_08.jpg" alt="florida_international_university"></a>
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <a href=https://www.ncf.edu>
+          <img src="image/logo_09.jpg" alt="new_college_of_florida"></a>
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <a href=http://www.unf.edu>
+          <img src="image/logo_10.jpg" alt="university_of_north_florida"></a>
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <a href=http://uwf.edu>
+          <img src="image/logo_11.jpg" alt="university_of_west_florida"></a>
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <a href=https://floridapoly.edu>
+          <img src="image/logo_12.jpg" alt="florida_polytechnic_university">
+          </a>
+        </div>
+      </div>
+      </div>
+      </div>
+    </aside>
     <footer>
       <div class="section group">
-        <div class="col span_1_of_3">
+	<div class="col span_1_of_3">
       <nav>
         <a class ="link 1" href="index.html">Home</a>
         <a class ="link 2" href="research.html">FESC Research</a>
@@ -184,7 +172,7 @@
       <h6>Copyright 2018 Floria Energy Sytems Consortium</h6>
       <h6>All Rights Reserved. Design by sjulien.com.</h6>
         </div>
-      <div class="col span_1_of_3">
+        <div class="col span_1_of_3">
       <i class="fab fa-facebook-square fa-3x"></i>
       <i class="fab fa-twitter-square fa-3x"></i>
       <i class="fab fa-linkedin fa-3x"></i>
@@ -193,3 +181,4 @@
     </footer>
   </body>
 </html>
+
