--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif%7CNeuton%7CSlabo+27px" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles/index.css">
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="scripts/script.js"></script>
     <title>Floria Energy Sytems Consortium</title>
   </head>
@@ -37,7 +38,9 @@
     <section>
       <div class="section group">
         <div class="col span_1_of_2">
+           <a href=index.html>
           <img class ="logo" src="image/fesc_logo.png" alt="logo">
+          </a>
         </div>
         <div class="col span_1_of_2">
           <h1 class ="title">Florida Energy Systems Consortium</h1>
