--- a/research.html
+++ b/research.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href=https://necolas.github.io/normalize.css/8.0.0/normalize.css>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
    <link href="https://fonts.googleapis.com/css?family=Bree+Serif%7CNeuton%7CSlabo+27px" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/research.css">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
  <script src="scripts/script.js"></script>
     <title>FESC Research</title>
   </head>
@@ -37,7 +39,9 @@
     <section>
       <div class="section group">
 	   <div class="col span_1_of_2">
-      <img class ="logo" src="image/fesc_logo.png" alt="logo">
+       <a href=index.html>
+          <img class ="logo" src="image/fesc_logo.png" alt="logo">
+          </a>
         </div>
         <div class="col span_1_of_2">
       <h1 class ="title">Florida Energy Systems Consortium</h1>
