--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif%7CNeuton%7CSlabo+27px" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/contact.css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/contact.js"></script>
     <title>Contact Us</title>
   </head>
     <body>
