--- a/research.html
+++ b/research.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="styles/research.css">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
- <script src="scripts/script.js"></script>
+ <script src="scripts/research.js"></script>
     <title>FESC Research</title>
   </head>
     <body>
